MDEV-240: SHOW EXPLAIN: Assertion `this->optimized == 2' failed - Fix the bug: SHOW EXPLAIN may hit a case where a join is partially   optimized. - Change JOIN::optimized to use enum instead of numeric constants